...
        TextField(
            password,
            onValueChange = {
                password = it
            },
            placeholder = {
                Text("Mot de passe")
            }
        )

        Button(
            enabled = viewModel.selfState.value !is SelfUiState.Connecting,
            onClick = {
                connecting = true
            }
        ) {
            Text("Se connecter")
        }

        if (viewModel.selfState.value is SelfUiState.CantConnect)
        {
            Text("Impossible de se connecter: " + (viewModel.selfState.value as SelfUiState.CantConnect).message)
        }
...
