...
            horizontalArrangement = Arrangement.SpaceBetween,
            verticalAlignment = Alignment.CenterVertically
        ) {
            OutlinedTextField(
                value = name,
                onValueChange = { if (nameEditing) name = it },
                label = { Text("Nom") },
                readOnly = !nameEditing,
                modifier = Modifier.weight(1f)
            )
            IconButton(onClick = {
                nameEditing = !nameEditing
                if (!nameEditing) onSaveClick(profile.copy(name = name))
...
            horizontalArrangement = Arrangement.SpaceBetween,
            verticalAlignment = Alignment.CenterVertically
        ) {
            OutlinedTextField(
                value = mail,
                onValueChange = { if (mailEditing) mail = it },
                label = { Text("Email") },
                readOnly = !mailEditing,
                modifier = Modifier.weight(1f)
            )
            IconButton(onClick = {
                mailEditing = !mailEditing
                if (!mailEditing) onSaveClick(profile.copy(mail = mail))
...
