...
    modifier: Modifier = Modifier,
    content: @Composable () -> Unit
) {
    val scope = rememberCoroutineScope()
    val items: List<AdminDrawerItem> = listOf(
        AdminDrawerItem("Downloads", Icons.Default.Download) { AdminNavigationManager.downloadsPageAction.navigate() },
        AdminDrawerItem("Manage users", Icons.Default.People) { AdminNavigationManager.usersPageAction.navigate() },
        AdminDrawerItem("Account settings", Icons.Default.Settings) { AdminNavigationManager.settingsPageAction.navigate() },
        AdminDrawerItem("Logout", Icons.Default.Logout) {
            scope.launch{
                selfViewModel.logout()
            }

...
